[package]
name = "vx"
version = "0.1.0"
authors = ["PeterClarkLboro <52826658+Peter229@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = { version = "0.10.1", features = [ "spirv" ] }
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "2.0"
zip = "0.5.11"
glob = "0.3"
noise = "0.7"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"